learning JS start pong

--- a/ft_transcendence.html
+++ b/ft_transcendence.html
@@ -3,10 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <title>Transcendence</title>
-    <link rel="stylesheet" href="css/game.css">
-    <script "js/game.js"></script>
+    <link rel="stylesheet" href="./css/game.css">
   </head>
   <body>
-    <div class="game_canvas"></div>
+    <h1>Transcendence</h1>
+    <canvas id="game" width="1200" height="640"></canvas>
+    <script src="./js/pad.js"></script>
+    <script src="./js/input.js"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
