--- a/ft_transcendence.html
+++ b/ft_transcendence.html
@@ -8,6 +8,7 @@
   <body>
     <h1>Transcendence</h1>
     <canvas id="game" width="1200" height="640"></canvas>
+    <script src="./js/ball.js"></script>
     <script src="./js/pad.js"></script>
     <script src="./js/input.js"></script>
     <script src="./js/main.js"></script>
